--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       <section id="main_content" class="inner">
         <h3>Stormogulen</h3>
 
-<p></p>
+<p>
+<img src="images/lambda.png">
+</p>
 
 <pre><code>
 </code></pre>
