Added links to page.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Stormogulen</h3>
+        <h3>Stormogulen<h3>
+<p>
+  <ol>
+    <li><a href="http://emacsformacosx.com/">Emacs for Mac OS X</a></li>
+    <li><a href="https://github.com/robbyrussell/oh-my-zsh"> Oh My ZSH</a></li>
+    <li><a href="http://mxcl.github.com/homebrew/">Homebrew</a></li>
+  </ol>
+</p>
 
 <p>
 <img src="images/lambda.png">
