Added some links

--- a/index.html
+++ b/index.html
@@ -27,13 +27,25 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Stormogulen<h3>
+        
+
+
 <p>
+  <h2>Software</h2>
   <ol>
     <li><a href="http://emacsformacosx.com/">Emacs for Mac OS X</a></li>
     <li><a href="https://github.com/robbyrussell/oh-my-zsh"> Oh My ZSH</a></li>
     <li><a href="http://mxcl.github.com/homebrew/">Homebrew</a></li>
   </ol>
+</p>
+
+<p>
+  <h2>Web</h2>
+  <ol>
+    <li><a href="http://irreal.org/blog/">Irreal</a></li>
+    <li><a href="http://eli.thegreenplace.net/">Eli Bendersky's Website</li>
+    <li><a href="http://this-plt-life.tumblr.com/">This PLT Life</a></li>
+    <li><a href="http://lambda-the-ultimate.org/">Lambda the Ultimate</a></li>
 </p>
 
 <p>
