Added iTerm 2 link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        
+
 
 
 <p>
@@ -36,6 +36,7 @@
     <li><a href="http://emacsformacosx.com/">Emacs for Mac OS X</a></li>
     <li><a href="https://github.com/robbyrussell/oh-my-zsh"> Oh My ZSH</a></li>
     <li><a href="http://mxcl.github.com/homebrew/">Homebrew</a></li>
+    <li><a href="http://www.iterm2.com/#/section/home">iTerm 2</a></li>
   </ol>
 </p>
 
