--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Stormogulen.github.com : " />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="canonical" href="http://stormogulen.github.com" />
+    <link rel="shortcut icon" href="/favicon.ico" />
 
     <title>Stormogulen.github.com</title>
   </head>
